// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in GifGrid Debe mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h2
    className="title is-5 is-capitalized"
  >
    Thor
  </h2>
  <div
    className="columns is-multiline is-tablet mb-6"
  >
    <div
      className="column is-one-quarter"
      key="LSJ12SAKDJS2"
    >
      <GifGridItem
        id="LSJ12SAKDJS2"
        title="Cualquier cosa"
        url="https://cualquiercosa.com/demo-imagen.png"
      />
    </div>
  </div>
</Fragment>
`;

exports[`Test in GifGrid Should render <GifGid /> 1`] = `
<Fragment>
  <div
    className="notification animate__delay-1s is-success animate__animated animate__flash animate__infinite"
  >
    <p>
      Cargando...
    </p>
  </div>
  <h2
    className="title is-5 is-capitalized"
  >
    Thor
  </h2>
  <div
    className="columns is-multiline is-tablet mb-6"
  />
</Fragment>
`;
